# SecHitTelBot

./: .env.example  .gitignore  .pre-commit-config.yaml  Commands.py  GamesController.py  MainController.py  README.md  commands.py  config.py  controller.py  engine.py  game_types.py  llm_strategy.py  main.py  narrator.py  persistence.py  plot_simulations.py  pyproject.toml  requirements.txt  simulate.py  stats.json  stats.py
.github/workflows/: ci.yml
Boardgamebox/: Board.py  Game.py  Player.py  State.py
Constants/: Config.py
boardgamebox/: board.py  game.py  player.py  state.py
constants/: cards.py
tests/: conftest.py  test_callbacks.py  test_engine.py  test_game_logic.py  test_narrator.py  test_nomination_timeout.py  test_persistence.py  test_stats.py  test_vote_timeout.py
