[project]
name = "secreth-telegrambot"
version = "0.1.0"
description = "Telegram bot for the Secret Hitler board game"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.87.0",
    "python-telegram-bot>=22.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
]
sim = [
    "matplotlib>=3.9",
    "pydantic>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
ignore = ["simulate.py", "plot_simulations.py"]
